chore: add Google auth with Supabase

--- a/package.json
+++ b/package.json
@@ -14,37 +14,46 @@
   },
   "dependencies": {
     "@langchain/community": "^0.3.45",
-    "@langchain/core": "^0.3.57",
-    "@langchain/openai": "^0.5.12",
+    "@langchain/core": "^0.3.58",
+    "@langchain/langgraph": "^0.3.3",
+    "@langchain/openai": "^0.5.13",
     "@langchain/pinecone": "^0.0.1",
     "@ngneat/falso": "^7.4.0",
     "@pinecone-database/pinecone": "^6.1.0",
     "@prisma/client": "^6.9.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@types/lodash": "^4.17.17",
+    "ai": "^4.3.16",
+    "clsx": "^2.1.1",
     "commander": "^12.0.0",
     "csv-parse": "^5.6.0",
+    "cuid": "^3.0.0",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "semantic-chunking": "^2.4.3",
     "slugify": "^1.6.6",
+    "tailwind-merge": "^3.3.1",
     "tiktoken": "^1.0.21",
     "zod": "^3.25.56"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bun": "latest",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "daisyui": "^5.0.43",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3",
-    "@types/bun": "latest",
-    "tsx": "^4.7.1"
+    "tailwindcss": "^4",
+    "tsx": "^4.7.1",
+    "typescript": "^5"
   }
 }
