--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@langchain/core": "^0.3.58",
     "@langchain/langgraph": "^0.3.3",
     "@langchain/openai": "^0.5.13",
-    "@langchain/pinecone": "^0.0.1",
+    "@langchain/pinecone": "^0.2.0",
     "@ngneat/falso": "^7.4.0",
     "@pinecone-database/pinecone": "^6.1.0",
     "@prisma/client": "^6.9.0",
@@ -30,12 +30,16 @@
     "csv-parse": "^5.6.0",
     "cuid": "^3.0.0",
     "date-fns": "^4.1.0",
+    "googleapis": "^150.0.1",
+    "inflection": "^3.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.515.0",
+    "markdown-to-jsx": "^7.7.8",
     "next": "15.3.3",
     "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-use": "^17.6.0",
     "semantic-chunking": "^2.4.3",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.3.1",
