feat: enhance chatbot functionality with new PostgreSQL integration and UI improvements

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.58",
     "@langchain/langgraph": "^0.3.3",
+    "@langchain/langgraph-checkpoint-postgres": "^0.0.5",
     "@langchain/openai": "^0.5.13",
     "@langchain/pinecone": "^0.2.0",
     "@ngneat/falso": "^7.4.0",
@@ -33,9 +34,10 @@
     "googleapis": "^150.0.1",
     "inflection": "^3.0.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.515.0",
+    "lucide-react": "^0.522.0",
     "markdown-to-jsx": "^7.7.8",
     "next": "15.3.3",
+    "pg": "^8.16.2",
     "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -51,6 +53,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bun": "latest",
     "@types/node": "^20",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "daisyui": "^5.0.43",
